# NAI

./: README.md
LAB1/: CMakeLists.txt  main.cpp
LAB11/: main.cpp
LAB12/: graf.txt  main.cpp
LAB2/: CMakeLists.txt  main.cpp
LAB3/: CMakeLists.txt  main.cpp  readme.md
LAB4/: CMakeLists.txt  main.cpp
LAB5/: CMakeLists.txt
LAB7/cpp/: CMakeLists.txt  main.cpp
LAB7/python/: main.py
LAB8/: CMakeLists.txt  main.cpp
LAB9/: CMakeLists.txt  main.cpp
